# python-LiPoPSU

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
LiPoPSU/: bq27510.py  influxdataproducer.py
eagle/LiPo-PSU/: LiPo-PSU.brd  LiPo-PSU.sch  eagle.epf
eagle/LiPo-PSU/cam/: LiPo-PSU Board Outline.ger  LiPo-PSU Board Outline.gpi  LiPo-PSU Bottom Layer.ger  LiPo-PSU Bottom Layer.gpi  LiPo-PSU Bottom Silk Screen.ger  LiPo-PSU Bottom Silk Screen.gpi  LiPo-PSU Bottom Solder Mask.ger  LiPo-PSU Bottom Solder Mask.gpi  LiPo-PSU Bottom Stencil.gpi  LiPo-PSU Drills.dri  LiPo-PSU Drills.xln  LiPo-PSU Internal Plane 1.ger  LiPo-PSU Internal Plane 1.gpi  LiPo-PSU Internal Plane 2.ger  LiPo-PSU Internal Plane 2.gpi  LiPo-PSU Top Layer.ger  LiPo-PSU Top Layer.gpi  LiPo-PSU Top Silk Screen.ger  LiPo-PSU Top Silk Screen.gpi  LiPo-PSU Top Solder Mask.ger  LiPo-PSU Top Solder Mask.gpi  LiPo-PSU Top Stencil.ger  LiPo-PSU Top Stencil.gpi  LiPo-PSU.drl
eagle/lbr/: LiPoPSU.lbr
