[metadata]
name				= LiPoPSU
version				= 0.1.0
summary				= Python driver for LiPoPSU Board
description-file	= README.md
author				= Mike Panetta
author-email		= panetta.mike@gmail.com
home-page			= https://github.com/bentwire/python-LiPoPSU
classifier			=
	Intended Audience :: Developers
	Topic :: Software Development
	Topic :: System :: Hardware
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[files]
packages = LiPoPSU

[entry_points]
console_scripts =
	influx-data-producer = LiPoPSU.influxdataproducer:run
